--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <input
           type="text"
           name="searchQuery"
-          placeholder="Введите ключевое слово"
+          placeholder="Insert key to search"
         />
         <button type="submit">Поиск</button>
       </form>
